# lumina-todo-app-hackathon

./: .env.backup  .env.example  .gitignore  CLAUDE.md  memory.md  mock-api.mjs
.claude/agents/: api-architect.md  auth-integration-expert.md  chatbot_agent.md  db-schema-designer.md  huggingface-deployer.md  migration-expert.md  openai_agent_builder.md  ui_designer_agent.md  vercel-deployer.md
.specify/memory/: constitution.md
api/: .dockerignore  .env.example  .env.hf.example  .gitignore  Dockerfile  README.md  deploy-hf.sh  evolution_todo.db  evolution_todo.db-shm  evolution_todo.db-wal  pyproject.toml  requirements.txt
api/app/: __init__.py  main.py
api/app/core/: config.py  database.py  deps.py  email.py  security.py
api/app/jobs/: __init__.py  scheduler.py
api/app/models/: __init__.py  notification.py  task.py  user.py
api/app/routers/: __init__.py  auth.py  chat.py  notifications.py  tasks.py
api/app/schemas/: __init__.py  auth.py  notification.py  task.py
api/app/services/: __init__.py  notification_service.py
api/tests/: conftest.py  test_notification_e2e.py  test_notification_service.py  test_notifications.py  test_oauth.py  test_password_reset.py
backend/: README.md  pyproject.toml
backend/src/: __init__.py  __main__.py  main.py
backend/src/commands/: __init__.py  add.py  base.py  complete.py  delete.py  exit.py  help.py  list.py  search.py  show.py  stats.py  update.py
backend/src/models/: __init__.py  task.py
backend/src/parsers/: __init__.py  commands.py  nlp.py
backend/src/storage/: __init__.py  memory.py
backend/src/ui/: __init__.py  banner.py  console.py  panels.py  prompts.py  tables.py  theme.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py  test_models.py  test_parsers.py  test_storage.py
chatbot/: .dockerignore  .env.example  Dockerfile  Dockerfile.hf  README.hf.md  README.md  pyproject.toml  requirements.hf.txt
chatbot/agent/: __init__.py  agent_sdk.py  api_client.py  chat.py  client.py  config.py  conversation.py  schemas.py  tools.py
chatbot/mcp_server/: __init__.py  config.py  database.py  logging.py  main.py  migrations.py  models.py  schemas.py
chatbot/mcp_server/tools/: __init__.py  add_task.py  base.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
chatbot/tests/: __init__.py  conftest.py  test_add_task.py  test_agent_chat.py  test_agent_client.py  test_agent_config.py  test_agent_conversation.py  test_agent_tools.py  test_api.py  test_chat_integration.py  test_complete_task.py  test_delete_task.py  test_list_tasks.py  test_update_task.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
helm/lumina-todo/: Chart.yaml  values.yaml
specs/001-phase1-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-todo-frontend/: data-model.md  quickstart.md  spec.md  (+2 more)
(+254 files in other folders)
