# Task T002: Initialize UV project with dependencies
[project]
name = "todo-cli"
version = "1.0.0"
description = "Professional Todo Console Application - Phase I"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

# Task T005: Configure pytest settings per research.md
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
